# tdi-trading-bot

./: .gitignore  README.md  agents.md  fmt  lint:bot  lint:web  migrate  pyproject.toml  requirements-dev.txt  requirements.txt  run:bot:paper  run:web  test:backtest:smoke  test:e2e:paper  test:unit
apps/bot/: backtest.py  binance.py  cli.py  loop.py  migrations.py
apps/common/: config.py  database.py
apps/web/: main.py
docs/run-logs/: 2025-09-29-paper.md
tests/backtest/: test_smoke.py
tests/unit/: test_config.py  test_loop.py  test_migrations.py  test_web_health.py
